# ambient

./: .envrc  .gitattributes  .gitignore  .vimrc.lua  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  treefmt.toml
.config/: nextest.toml
crates/ambient-analysis/: Cargo.toml
crates/ambient-analysis/src/: core_cache.rs  lib.rs  occurrences.rs  occurrences_tests.rs  package.rs  queries.rs  session.rs  session_tests.rs  symbols.rs
crates/ambient-analysis/src/completions/: core_paths.rs  locals.rs  members.rs  mod.rs
crates/ambient-analysis/src/queries/: bindings.rs  members.rs  mod.rs  signature.rs
crates/ambient-analysis/tests/: examples_clean.rs
crates/ambient-cli/: Cargo.toml
crates/ambient-cli/src/: cli.rs  diagnostic.rs  lib.rs  main.rs  serialize.rs
crates/ambient-cli/src/commands/: build.rs  check.rs  compile.rs  dev.rs  host.rs  init.rs  mod.rs  run.rs  store.rs  watch.rs
crates/ambient-cli/src/repl/: base.rs  completer.rs  editor.rs  highlighter.rs  inspect.rs  lsp_bridge.rs  mod.rs  render.rs  session.rs
crates/ambient-cli/tests/: abilities_and_effects.rs  ability_method_imports.rs  ability_sets.rs  associated_types.rs  bidirectional_lambda.rs  bounded_generics.rs  build_diagnostics.rs  builtin_interface_parity.rs  conditional_impls.rs  conversions.rs  core_prelude_enums.rs  cross_module_enum_variants.rs  cross_module_traits.rs  dev_live_upgrade.rs  effect_polymorphism.rs  enums_and_match.rs  env.rs  examples.rs  extern_fn.rs  generic_structs.rs  handlers_and_sandbox.rs  import_cycles.rs  incremental_cache.rs  incremental_cache_deps.rs  incremental_cache_ordering.rs  inference_and_intrinsics.rs  integration_tests.rs  lazy_compilation.rs  lsp_smoke.rs  module_abilities.rs  module_imports.rs  module_interface.rs  module_system.rs  never_types.rs  platform_module.rs  platform_prelude.rs  repl_completion.rs  repl_tests.rs  return_expr.rs  run_build_check.rs  (+11 more)
crates/ambient-cli/tests/common/: mod.rs
crates/ambient-cli/tests/repl_harness/: assertions.rs  builder.rs  driver.rs  input.rs  mod.rs
crates/ambient-engine/: Cargo.toml
crates/ambient-engine/src/: abilities.rs  ability_resolver.rs  ast.rs  build.rs  bytecode.rs  client.rs  compilation_cache.rs  compiler.rs  const_eval.rs  content_hash.rs  core_library.rs  disk_store.rs  dispatch_deps.rs  format.rs  fqn.rs  infer.rs  interpreter.rs  lib.rs  manifest.rs  module_cycles.rs  module_env.rs  module_path.rs  module_registry.rs  natives.rs  network_state.rs  object.rs  package.rs  protocol.rs  remote.rs  remote_state.rs  resolve.rs  runtime_ability.rs  runtime_config.rs  server.rs  store.rs  syntax.rs  test_utils.rs  types.rs  value.rs  vm.rs  (+1 more)
crates/ambient-engine/src/ast/: dicts.rs  items.rs  mod.rs  name.rs
crates/ambient-engine/src/bytecode/: builder.rs  debug.rs  disasm.rs  mod.rs  opcode.rs
crates/ambient-engine/src/compiler/: assemble.rs  basic_tests.rs  const_tests.rs  context.rs  control_flow_tests.rs  debug_tests.rs  dicts.rs  entry.rs  error.rs  expr.rs  expr_tests.rs  hash.rs  intrinsics.rs  lambda_tests.rs  lambdas.rs  mod.rs  module_output.rs  pattern_tests.rs  patterns.rs  prelink.rs  repl.rs  test_support.rs  tests.rs
crates/ambient-engine/src/core_lib/: bytes.ab  convert.ab  exception.ab  list.ab  main.ab  math.ab  number.ab  option.ab  prelude.ab  protocol.ab  reflect.ab  result.ab  string.ab  time.ab  traits.ab
crates/ambient-engine/src/disk_store/: diff.rs  diff_tests.rs  mod.rs  prelink.rs  snapshot.rs  snapshot_tests.rs  tags.rs  tags_tests.rs  tests.rs
crates/ambient-engine/src/infer/: abilities.rs  check.rs  constraints.rs  conversions.rs  effects.rs  enums.rs  env.rs  error.rs  expr.rs  fingerprints.rs  inherent.rs  intrinsics.rs  mod.rs  pattern.rs  target_match.rs  tests.rs  unify.rs
crates/ambient-engine/src/module_interface/: ast_hash.rs  encode.rs  mod.rs  structured.rs  tests.rs
crates/ambient-engine/src/module_registry/: exports.rs  imports.rs  mod.rs  mount_tests.rs  scope.rs  tests.rs
crates/ambient-engine/src/natives/: mod.rs
crates/ambient-engine/src/object/: mod.rs  tests.rs
crates/ambient-engine/src/resolve/: dep_classification_tests.rs  deps.rs  mod.rs  refs.rs  tests.rs  types.rs  walk.rs
crates/ambient-engine/src/store/: mod.rs  tests.rs
crates/ambient-engine/src/symbol_db/: db.rs  export_hash.rs  extract.rs  mod.rs  schema.rs  serialize.rs
crates/ambient-engine/src/types/: abilities.rs  core.rs  display.rs  mod.rs  ops.rs  primitives.rs  tests.rs  traits.rs
crates/ambient-lsp/: Cargo.toml
crates/ambient-lsp/src/: analysis.rs  completion_service.rs  completions.rs  convert.rs  core_completions.rs  document_symbols.rs  documents.rs  hover_format.rs  lib.rs  local_completions.rs  member_completions.rs  package.rs  reanalyze.rs  rename.rs  semantic_tokens.rs  server.rs  util.rs  workspace.rs
crates/ambient-lsp/tests/: completion.rs  core_navigation.rs  definition.rs  diagnostics.rs  document_symbol.rs  hover.rs  incremental.rs  integration_test.rs  method_navigation.rs  parity.rs  references.rs  rename.rs  semantic_tokens.rs  transport.rs
crates/ambient-parser/: Cargo.toml
crates/ambient-parser/src/: cst.rs  error.rs  lexer.rs  lexer_tests.rs  lib.rs  lower.rs  parser.rs  resolve.rs
crates/ambient-parser/tests/: ability_identity.rs  content_addressing.rs  module_env.rs  property_tests.rs  recovery.rs  type_soundness.rs
crates/ambient-platform/: Cargo.toml
crates/ambient-platform/src/: console.rs  deploy.rs  deploy_classify_tests.rs  drain.rs  env.rs  execute.rs  fs.rs  lib.rs  log.rs  network.rs  network_state.rs  platform.ab  process.rs  random.rs  remote_deploy.rs  retire.rs  state.rs  stdio.rs  task.rs  tcp.rs  tcp_state.rs  time.rs
crates/ambient-platform/tests/: deploy_core.rs  drain.rs  env.rs  live_ability.rs  process_runtime.rs  retirement.rs  state_cells.rs  state_migration.rs  tasks.rs
crates/ambient-runtime/: Cargo.toml
crates/ambient-runtime/src/: async_ability.rs  console.rs  execute.rs  fs.rs  lib.rs  log.rs  network.rs  network_state.rs  random.rs  remote.rs  runtime.ab  time.rs
(+309 files in other folders)
