[package]
name = "ambient-analysis"
version = "0.1.0"
edition = "2024"
description = "Shared analysis layer for the Ambient language: one parse/check/diagnose pipeline consumed by the CLI and the LSP"

[dependencies]
ambient-engine = { path = "../ambient-engine" }
ambient-parser = { path = "../ambient-parser" }
ambient-platform = { path = "../ambient-platform" }

[dev-dependencies]
tempfile = "3.14"
