[package]
name = "ambient-analysis"
version.workspace = true
edition.workspace = true
description = "Shared analysis layer for the Ambient language: one parse/check/diagnose pipeline consumed by the CLI and the LSP"

[dependencies]
ambient-engine.workspace = true
ambient-parser.workspace = true
ambient-platform.workspace = true

[dev-dependencies]
tempfile.workspace = true
