[package]
name = "ambient-analysis"
version.workspace = true
edition.workspace = true
description = "Shared analysis layer for the Ambient language: one parse/check/diagnose pipeline consumed by the CLI and the LSP"

[dependencies]
ambient-engine.workspace = true
ambient-parser.workspace = true
ambient-platform.workspace = true
blake3.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile.workspace = true
