[package]
name = "ambient-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ambient"
path = "src/main.rs"

[dependencies]
ambient-engine = { path = "../ambient-engine" }
ambient-parser = { path = "../ambient-parser" }
anyhow = "1.0.100"
blake3 = "1.5.4"
clap = { version = "4.5.53", features = ["cargo", "derive", "string", "env"] }
rustyline = { version = "14.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
