[package]
name = "ambient-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ambient"
path = "src/main.rs"

[dependencies]
ambient-engine = { path = "../ambient-engine" }
ambient-parser = { path = "../ambient-parser" }
ambient-lsp = { path = "../ambient-lsp" }
anyhow = "1.0.100"
blake3 = "1.5.4"
clap = { version = "4.5.53", features = ["cargo", "derive", "string", "env"] }
notify = "6.1"
rustyline = { version = "14.0", features = ["with-file-history"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.14"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
