[package]
name = "ambient-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ambient"
path = "src/main.rs"

[dependencies]
ambient-analysis.workspace = true
ambient-engine.workspace = true
ambient-parser.workspace = true
ambient-lsp.workspace = true
ambient-platform.workspace = true
anyhow.workspace = true
blake3.workspace = true
clap = { version = "4.5.53", features = ["cargo", "derive", "string", "env"] }
notify = "6.1"
rustyline = { version = "14.0", features = ["with-file-history"] }
dirs = "5.0"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
ambient-core.workspace = true
tempfile.workspace = true
uuid.workspace = true
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
