[package]
name = "ambient-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ambient-core = { path = "../ambient-core" }
ambient-runtime = { path = "../ambient-runtime" }
base64 = "0.22"
blake3 = { version = "1.5.5", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0.11"
tokio = { version = "1.42", features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
