[package]
name = "ambient-engine"
version.workspace = true
edition.workspace = true

[dependencies]
ambient-ability.workspace = true
ambient-core.workspace = true
bincode = "1.3"
blake3.workspace = true
hex.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
