[package]
name = "ambient-engine"
version.workspace = true
edition.workspace = true

[dependencies]
ambient-ability.workspace = true
ambient-core.workspace = true
bincode = "1.3"
blake3.workspace = true
hex.workspace = true
include_dir.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
thiserror.workspace = true
toml = "0.9"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
