[package]
name = "ambient-lsp"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for the Ambient programming language"

[dependencies]
ambient-analysis.workspace = true
ambient-engine.workspace = true
ambient-parser.workspace = true
ambient-platform.workspace = true

# LSP dependencies
lsp-server = "0.7"
lsp-types = "0.97"

# Async runtime for the server
crossbeam-channel = "0.5"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
log = "0.4"

# Error handling
anyhow.workspace = true

# Snapshot assertions, used by the `test_harness` module (compiled into the lib).
insta = "1.44"

[dev-dependencies]
# Only the one transport smoke test (tests/transport.rs) still needs a real
# on-disk package; the rest of the harness is in-memory.
tempfile.workspace = true
