[package]
name = "ambient-parser"
version = "0.1.0"
edition = "2024"
description = "Parser for the Ambient programming language"

[dependencies]
ambient-engine = { path = "../ambient-engine" }
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
blake3 = "1.5.5"
proptest = "1.5"
