[package]
name = "ambient-parser"
version.workspace = true
edition.workspace = true
description = "Parser for the Ambient programming language"

[dependencies]
ambient-engine.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
blake3.workspace = true
proptest = "1.5"
