[package]
name = "ambient-platform"
version.workspace = true
edition.workspace = true
description = "Host-provided platform abilities for the Ambient language"

[dependencies]
ambient-ability.workspace = true
ambient-core.workspace = true
ambient-engine.workspace = true
blake3.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
ambient-parser.workspace = true
